# AutSPACEs

./: .all-contributorsrc  .gitignore  .gitlab-ci.yml  CHANGELOG-20220224.md  Dockerfile  LICENSE  README.md  code-of-conduct.md  contributing-guidelines.md  data.json  dev_readme.md  docker-compose.override.yml  docker-compose.yml  docker-run.sh  explore-experiences.html  fly.toml  pyproject.toml  roadmap.md  setup.cfg  user-flow.md
GSoC-2021/: Kush-Kothari.md  README.md
config/: .env.actions  .env.template
docker/: docker-compose.prod.yml
docs/: Makefile
documentation/: README.md
get-started/: get_started.md
htmlcov/: class_index.html  d_2b118a4a7b3791e6_test_helpers_py.html  d_2b118a4a7b3791e6_test_management_commands_py.html  d_2b118a4a7b3791e6_test_models_py.html  d_2b118a4a7b3791e6_test_moderate_views_py.html  d_2b118a4a7b3791e6_test_my_stories_py.html  d_2b118a4a7b3791e6_test_story_filters_py.html  d_2b118a4a7b3791e6_test_templatetags_py.html  d_2b118a4a7b3791e6_test_views_py.html  d_2b118a4a7b3791e6_tests_2023_py.html  d_4046665443e2fa71___init___py.html  d_4046665443e2fa71_caches_py.html  d_4046665443e2fa71_common_py.html  d_4046665443e2fa71_csp_py.html  d_4046665443e2fa71_logging_py.html  d_48d8fd1d7c4b9e0e_admin_py.html  d_48d8fd1d7c4b9e0e_apps_py.html  d_48d8fd1d7c4b9e0e_context_processors_py.html  d_48d8fd1d7c4b9e0e_feeds_py.html  d_48d8fd1d7c4b9e0e_forms_py.html  d_48d8fd1d7c4b9e0e_helpers_py.html  d_48d8fd1d7c4b9e0e_models_py.html  d_48d8fd1d7c4b9e0e_urls_py.html  d_48d8fd1d7c4b9e0e_views_py.html  d_5684adac55bd2b8a_custom_tags_py.html  d_5684adac55bd2b8a_story_filters_py.html  d_aadf874289a68d69_seed_db_py.html  d_aadf874289a68d69_unseed_db_py.html  d_b172dc9ee102875b_0001_initial_py.html  d_b172dc9ee102875b_0005_auto_20230105_1303_py.html  (+83 more)
(+357 files in other folders)
